# internal/modules/auth/model.go
@@ -15,6 +15,18 @@ type RegisterResponse struct {
 	UserId    string `json:"user_id"`
 }
 
+type LoginRequest struct {
+	Phone    string `json:"phone"`
+	Password string `json:"password"`
+}
+
+type LoginResponse struct {
+	Token string `json:"token"`
+}
+
 var ErrPhoneTaken = errors.New("phone already registered")
 var ErrInvalidPhone = errors.New("invalid phone")
-var ErrInvalidCred = errors.New("invalid registration data")
+var ErrInvalidCred = errors.New("invalid credentials")
+var ErrInvalidToken = errors.New("invalid token")
+var ErrTokenExpired = errors.New("token expired")
+var ErrUnauthorized = errors.New("unauthorized")
